Add Reference File Creation for SNP2HLA.csh

--- a/HLA_tutorial.ipynb
+++ b/HLA_tutorial.ipynb
@@ -396,7 +396,13 @@
     "\n",
     "##### Inputs and Implementation: \n",
     "\n",
-    "> The C shell distribution of SNP2HLA requires the target genotype data in plink bim/bed/fam format, and the reference panel in Beagle format (*.bgl.phased and .markers). The format of the command is as follows - `./SNP2HLAcsh input_plink_prefix reference_panel_prefix output_prefix ./plink`. The following command serves as an example of imputation with SNP2HLA.csh if housed in linux distribution: \n",
+    "> The C shell distribution of SNP2HLA requires the target genotype data in plink bim/bed/fam format, and the reference panel in Beagle format (*.bgl.phased and .markers). Generating the correct reference panel inputs from the provided reference vcf file can be done with the vcf2beagle.jar command from beagle, an example of which is shown below:\n",
+    "``` bash\n",
+    "zcat Tutorial_1KGonly.bgl.phased.vcf.gz | java -jar vcf2beagle.jar ? Tutorial_1KGonly\n",
+    "gunzip Tutorial_1KGonly.bgl.gz \n",
+    "```\n",
+    "\n",
+    "> Imputing with SNP2HLA.csh is done with a command in the following format - `./SNP2HLAcsh input_plink_prefix reference_panel_prefix output_prefix ./plink`. The following command serves as an example of imputation with SNP2HLA.csh if housed in linux distribution: \n",
     "\n",
     "```bash\n",
     "cd /SNP2HLA_package_v1.0.3/SNP2HLA/\n",
